--- a/_posts/2016-11-22-foobar.markdown
+++ b/_posts/2016-11-22-foobar.markdown
@@ -10,7 +10,7 @@ image_thumbnail: /images/IMG_1583.JPG
 
 <html>
    <head>
-     <title>Clickjack test page</title>
+     <title>Dies ist ein Test</title>
    </head>
    <body>
      <p>Website is vulnerable to clickjacking!</p>
